--- a/psalmist_frontend/public/index.html
+++ b/psalmist_frontend/public/index.html
@@ -17,6 +17,10 @@
       rel="stylesheet"
     />
 
+    <!-- TinyMCE -->
+    <script src="https://cdn.tiny.cloud/1/1v1rtd8b64vx0ekbzfubrdydw3skdnd67tuq9924fu8h8tde/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+    <script>tinymce.init({selector:'textarea'});</script>
+
     <title>the psalmist</title>
   </head>
   <body>
